fixed font spacing on skills container for andmore

--- a/styles/sass/partials/elements/_main.scss
+++ b/styles/sass/partials/elements/_main.scss
@@ -37,7 +37,7 @@
         display: block;
 
         margin: $spacing;
-        width: 4 * $fontSizeBase;
+        width: 4.05 * $fontSizeBase;
         @include flexCol;
         justify-content: end;
         align-items: center;
